# tensorken

./: Cargo.toml  README.md  clippy.toml
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: tensor_conv2d.rs  tensor_exp.rs  tensor_matmul.rs  tensor_mul.rs  tensor_sum.rs  tensor_sum_to_scalar.rs
examples/: conv2d.rs  eye.rs  fancy_indexing.rs  jax_autodiff_cookbook.rs  makemore1a_bigrams.rs  makemore1b_nn.rs  matmul.rs  parallel_reduce_example.rs  tour.rs
src/: ad_forward._trace.rs  ad_forward.rs  ad_forward_ops.rs  ad_forward_trace.rs  ad_ops.rs  ad_ops_forward.rs  ad_ops_reverse.rs  ad_reverse.rs  ad_reverse_ops.rs  ad_trace.rs  conv.rs  diffable.rs  diffable_ext.rs  diffable_ops.rs  indexing.rs  lib.rs  math_macros.rs  num.rs  raw_tensor.rs  raw_tensor_cpu.rs  raw_tensor_fuse.rs  raw_tensor_shape_tracker.rs  raw_tensor_string.rs  raw_tensor_wgpu.rs  shape.rs  shape_strider.rs  tensor.rs  tensor_display.rs  tensor_mut.rs  tensor_serde.rs  tiny_tensor.rs  type_magic.rs  wgpu_context.rs
src/shaders/: correlate2d.wgsl  fused_mul_add.wgsl  gather.wgsl  map.wgsl  pad.wgsl  reduce.wgsl  zip.wgsl
tests/: jvp_test.rs  tensor_serde_test.rs  tensor_test.rs  vjp_test.rs
vega-lite/: bigram_heat_map.json
