[package]
name = "tensorken"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.1"
futures-intrusive = "0.5.0"
pollster = "0.3.0"
wgpu = {version="0.17.0", features=["trace"] }
prettytable-rs = "0.10.0"
rand = "0.8.5"
rand_distr = "0.4.3"

[dev-dependencies]
criterion = "0.5.0"
env_logger = "0.10.0"

[lib]
bench = false

[[bench]]
name = "tensor_exp"
harness = false

[[bench]]
name = "tensor_mul"
harness = false

[[bench]]
name = "tensor_sum"
harness = false

[[bench]]
name = "tensor_sum_to_scalar"
harness = false

[[bench]]
name = "tensor_matmul"
harness = false
